marcell/style.css
table {
    border: 4px solid black;
    border-collapse: separate;
    margin: 15% auto;
    text-align: center;
    padding: 2px;
    font-size: 18px;
}

img {
    width: 120px;
    height: 50px;
}

td:nth-child(2) {
    font-weight: 700;
}

td, tr, th {
    border: 1px solid black;
    padding: 15px;
}

